// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commons tests Stats - with children 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "ComponentWithChildren",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "ComponentWithChildren",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 1,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "ComponentWithChildren",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
]
`;

exports[`Commons tests Stats - with children 2`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 1,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
]
`;

exports[`Commons tests Stats - without children 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "TestClass",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/others/class.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "ClassComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/class-components.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "recursiveFunction",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "recursiveFunction",
        "originMock": true,
        "parent": {
          "dataTestId": null,
          "name": "recursiveFunction",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
        },
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "EmptyWithUseEffectAndUseCallback",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "WithDeps",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-2",
    "name": "WithDeps",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
  },
]
`;

exports[`Commons tests Stats - without children 2`] = `
{
  "calls": [
    {
      "args": undefined,
      "stats": {},
    },
  ],
  "dataTestId": null,
  "name": "TestClass",
  "numberOfCalls": 1,
  "parent": null,
  "relativePath": "/src/__integration-tests__/others/class.ts",
}
`;

exports[`Commons tests Stats - without children 3`] = `
{
  "calls": [
    {
      "args": undefined,
      "stats": {},
    },
  ],
  "dataTestId": "test-id-1",
  "name": "WithDeps",
  "numberOfCalls": 1,
  "parent": null,
  "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;
